fix(@clayui/css): Alert Indicator SF and adjust alignment in base theme

--- a/packages/clay-css/src/scss/atlas/variables/_alerts.scss
+++ b/packages/clay-css/src/scss/atlas/variables/_alerts.scss
@@ -96,6 +96,7 @@ $alert-indicator: () !default;
 $alert-indicator: map-deep-merge(
 	(
 		font-size: $alert-indicator-font-size,
+		vertical-align: clay-unset,
 	),
 	$alert-indicator
 );
